[package]
name = "from-env"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/program.rs"

[dev-dependencies]
trybuild = "1.0"
anyhow = "1"

[dependencies]
syn = { version = "2", features = ["extra-traits", "derive"] }
quote = "1"
dotenvy = "0.15"
heck = "0.4.1"